--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@
 /build
 /captures
 .externalNativeBuild
+/.idea/
+.idea/checkstyle-idea.xml
+.idea/compiler.xml
+.idea/copyright/
+.idea/dictionaries/
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/markdown-navigator/
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+app/libs/
